<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICT Labs</string>
    <string name="action_author">Thomas Wiegand (wieg0002)</string>
    <string name="period">Time</string>

    <!-- DOW -->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    
    <string name ="day">Day</string>
    <string name ="day_plus_minus">Day+/-</string>
    <string name ="week">Week</string>
    <string name ="month">Month</string>
    <string name ="extra">Extra</string>
    
    <string name ="network_error">Network Error.</string>
	<string name ="using_saved_values">Working offline using saved values.</string>
	<string name ="no_saved_values">No saved values available.</string>
	<string name ="no_data">No data available.</string>
	
	<string name="action_settings">Settings</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_grid_options">Grid Options</string>
</resources>
