<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:id="@+id/main_table">

    <!--  Row: Days of the Week -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/period"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/monday"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tuesday"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wednesday"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/thursday"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/friday"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 0800 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="0800"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/H0800monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0800m" />
        <TextView
            android:id="@+id/H0800tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0800t" />
        <TextView
            android:id="@+id/H0800wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0800w" />
        <TextView
            android:id="@+id/H0800thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0800th" />
        <TextView
            android:id="@+id/H0800friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0800f" />
    </TableRow>

    <!--  Row: 0900 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="0900"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1000 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1000"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1100 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1100"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1200 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1200"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1300 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1300"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1400 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1400"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1500 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1500"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1600 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1600"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <!--  Row: 1700 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1700"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

</TableLayout>
